	  were read incorrectly from a ROMFS file system.  From Mike Smith
	  (2013-8-25).
	* arch/arm/src/stm32/stm32_sdio.c: SourceForge bug #17 Fix if
	  CONFIG_SDIO_BLOCKSETUP defined, OS will crash". Generate an error
	  if CONFIG_SDIO_BLOCKSETUP is defined; that option is not yet supported
	  by the STM32 SDIO driver.  From CCTSAO (2013-6-26)
	* drivers/net/encx24j600.c and .h: Use the ENC's SRAM for multiple TX
	  packets.  From Max Holtzberg (2013-6-26).
	* include/nuttx/usb/usbhost.h, drivers/usbhost/usbhost_enumerate.c, and
	  all USB host drivers:  Added a new driver method:  getdevinfo.  This
	  method is intended to get various information about the connected device,
	  but currently returns only the device speed.  The device speed is
	  necessary by usbhost_enumerate in order to set a credible initial EP0
	  max packetsize.  High speed needs 64 bytes, low speed needs 8 bytes,
	  and full speed can handle almost any size (2013-8-26).
	* arch/arm:  Add hooks for Cortex-A8.  Not much more yet (2013-8-27).
	* Lots of files:  Fix all occurrents of "the the" in documentation and
	  comments (2013-8-27).
	* arch/arm/src/sama5/sam_allocateheap.c:  Correct the logic that
	  determines which memory regions get added to the heap.  When
	  CONFIG_MM_NREGIONS > 1, the logic was adding the ISRAM region to
	  the heap twice! (2013-6-27).
	* nuttx/arch/arm/src/sama5/sam_ehci.c:  Add (untested) support for
	  interrupt endpoints (2013-8-28).
	* arch/arm/src/sama5/chip/sam_udphs.h:  High-speed USB device register
	  definitions for the SAMA5 (2013-8-28)
	* arch/arm/src/sama5/sam-udphs.c:  A framework for the USB device
	  driver taken from another architecture.  There is very little
	  useful in this initial check-in (2013-8-29).
	* Remove all empty and most useless README.txt files (2013-8-31)
	* configs/freedom-kl25z/src/kl_spi.c:  Correct typo in name of a
	  function.  From Alan Carvalho de Assis (2013-8-31).
